# qr-transfer

./: LICENSE  README.md
receiver/: .gitignore  settings.gradle
receiver/app/: build.gradle
receiver/app/src/androidTest/java/com/example/qrreceiver/: ExampleInstrumentedTest.java
receiver/app/src/androidTest/java/dev/szczygiel/receiver/: ExampleInstrumentedTest.kt
receiver/app/src/main/: AndroidManifest.xml
receiver/app/src/main/java/com/example/qrreceiver/: MainActivity.java
receiver/app/src/main/java/dev/szczygiel/receiver/: MainActivity.kt
receiver/app/src/main/res/layout/: activity_main.xml
receiver/app/src/main/res/values/: strings.xml
receiver/app/src/test/java/com/example/qrreceiver/: ExampleUnitTest.java
receiver/app/src/test/java/dev/szczygiel/receiver/: ExampleUnitTest.kt
receiver/gradle/wrapper/: gradle-wrapper.properties
sender/: .gitignore  .isort.cfg  README.md  pyproject.toml
sender/sender/: __init__.py  app.py  encoder.py  gui.py  main.py  sender.kv
